<resources>
    <string name="app_name">SmarTalk</string>
    <string name="day_today">Today</string>
    <string name="day_yesterday">Yesterday</string>
    <string name="btn_director">Directory</string>
    <string name="btn_feature">Features</string>
    <string name="btn_history">History</string>
    <string name="btn_network">Network</string>
    <string name="btn_preferences">Preferences</string>
    <string name="btn_update">Update</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_about">About</string>
    <string name="btn_ok">OK</string>
    <string name="btn_bluetooth">Bluetooth</string>
    <string name="btn_menu">Menu</string>
    <string name="btn_log">Log</string>
    <string name="btn_iperf">Iperf</string>
    <string name="title_pin">PIN Password</string>
    <string name="label_pin_enable">PIN Enable</string>
    <string name="label_pin_old_passwd">Old Password</string>
    <string name="label_pin_new_passwd">New Password</string>
    <string name="label_pin_passwd">Password</string>
    <string name="tip_pin_choose">Choose your pin:</string>
    <string name="tip_pin_confirm">Confirm new password:</string>
    <string name="tip_pin_check">Enter your pin:</string>
    <string name="tip_pin_not_empty">PIN can\'t be empty</string>
    <string name="tip_pin_digit_only">PIN should be digit</string>
    <string name="tip_pin_saved">PIN saved</string>
    <string name="call_label_trying">Calling ...</string>
    <string name="call_label_incom">Ringing...</string>
    <string name="call_label_terminate">Call Ended</string>
    <string name="call_btn_168hangup">HangUp</string>
    <string name="call_label_headset">HeadSet</string>
    <string name="call168_btn_pickup">PickUp</string>
    <string name="btn_send">Send</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_more">more</string>
    <string name="label_contacts2">Contacts</string>
    <string name="label_groups">Groups</string>
    <string name="label_group_delete">Delete group</string>
    <string name="label_wifilist">WIFI List</string>
    <string name="label_domain">*Domain:</string>
    <string name="label_domain_proxy_label">Domain proxy</string>
    <string name="label_passwd">Password:</string>
    <string name="label_authID">Auth-ID:</string>
    <string name="label_contact_create">Add Contact</string>
    <string name="label_blackcontact_create">New blacklist</string>
    <string name="label_group_create">Add Group</string>
    <string name="label_line1">Line1</string>
    <string name="label_line2">Line2</string>
    <string name="tip_params_error">Params error.</string>
    <string name="tip_user_dulp">User is exist.</string>
    <string name="tip_group_dulp">Group is exist.</string>
    <string name="contact_mobile">Mobile:</string>
    <string name="contact_office">Office:</string>
    <string name="contact_other">Other:</string>
    <string name="contact_account">Account:</string>
    <string name="contact_ring">Ring:</string>
    <string name="contact_group">Group:</string>
    <string name="contact_default_ring">Default</string>
    <string name="label_server_host">Server-Host</string>
    <string name="label_group_addr">GroupHost:</string>
    <string name="label_group_port">GroupPort:</string>
    <string name="label_file_addr">FileIP:</string>
    <string name="label_file_port">FilePort:</string>
    <string name="label_setting_other">More</string>
    <string name="label_feature">Setting</string>
    <string name="label_left">Left</string>
    <string name="label_right">Right</string>
    <string name="label_redial">Redial</string>
    <string name="tip_account_save">Account saved.</string>
    <string name="d168_network_mobile">Mobile Network</string>
    <string name="label_network_apn">APN</string>
    <string name="label_network_config">Net Config</string>
    <string name="d168_network_wlan_list">WLAN List</string>
    <string name="d168_network_wlan">WLAN</string>
    <string name="conn_info_label">Connected:</string>
    <string name="d168_net_status">Closing</string>
    <string name="d168_conn_ssid">Not Connected</string>
    <string name="d168_no_simcard">No sim card</string>
    <string name="d168_btn_wifi_list">Select</string>
    <string name="d168_conn_status">Status:</string>
    <string name="d168_wifi_strength">Strength:</string>
    <string name="d168_wifi_security">Security:</string>
    <string name="d168_wifi_passwd">Password:</string>
    <string name="d168_wifi_pass_edit">Input Password</string>
    <string name="d168_wifi_ipsettings">IP Mode:</string>
    <string name="d168_wifi_speed">Speed:</string>
    <string name="d168_label_ipaddress">IP Address:</string>
    <string name="d168_label_gateway">Gateway:</string>
    <string name="d168_label_dns">DNS1:</string>
    <string name="d168_label_prefix">Prefix Length:</string>
    <string name="d168_label_dns2">DNS2:</string>
    <string name="d168_btn_wifi_close">Close</string>
    <string name="d168_btn_wifi_open">Open</string>
    <string name="d168_wifi_status_excellent">Excellent</string>
    <string name="d168_wifi_status_good">Good</string>
    <string name="d168_wifi_status_better">Better</string>
    <string name="d168_wifi_status_fair">Fair</string>
    <string name="d168_wifi_cert_name">unspecified</string>
    <string name="d168_label_callqueue">Call Queue</string>
    <string name="label_dial">Dial</string>
    <string name="label_call_history">History</string>
    <string name="label_call_allcalls">All calls</string>
    <string name="label_sms_history">SMS</string>
    <string name="d168_btn_unlock">Unlock</string>
    <string name="btn_select">Select</string>
    <string name="d168_btn_options">Options</string>
    <string name="d168_btn_edit">Edit</string>
    <string name="d168_btn_hide">Hide</string>
    <string name="d168_btn_back">Back</string>
    <string name="d168_btn_select">Select</string>
    <string name="btn_option_view">View</string>
    <string name="d168_btn_shift">Shift</string>
    <string name="d168_btn_create">Create</string>
    <string name="d168_btn_details">Details</string>
    <string name="d168_btn_movetoblack">Move to blacklist</string>
    <string name="d168_btn_movetocontact">Move to contact</string>
    <string name="d168_btn_call">Call</string>
    <string name="d168_btn_voice_call">Voice call</string>
    <string name="d168_btn_video_call">Video call</string>
    <string name="d168_btn_add">Add</string>
    <string name="d168_btn_check">View</string>
    <string name="d168_btn_exit">Exit</string>
    <string name="d168_btn_members">Members</string>
    <string name="d168_btn_group">Group</string>
    <string name="d168_btn_delete_all">Delete all</string>
    <string name="btn_conn">Connect</string>
    <string name="d168_btn_redia">Redia</string>
    <string name="d168_btn_redia_finish">Finish</string>
    <string name="d168_label_eap_method">Method:</string>
    <string name="d168_label_eap_identity">Identity:</string>
    <string name="d168_label_eap_phrase2">Phase 2:</string>
    <string name="d168_label_eap_user_cert">User certificate:</string>
    <string name="d168_label_eap_anonymous">Anonymous identity:</string>
    <string name="label_preferences">Preferences</string>
    <string name="label_date_and_time">Date&amp;Time</string>
    <string name="label_automatic_date_time">Manual time</string>
    <string name="label_server_address">Server Address:</string>
    <string name="label_resync_cycle">Resync Cycle:</string>
    <string name="label_language">Language:</string>
    <string name="label_backlight">Backlight:</string>
    <string name="label_5s">5s</string>
    <string name="label_brightness">Brightness:</string>
    <string name="label_tomezone">Timezone:</string>
    <string name="label_ringtone">Ringtone:</string>
    <string name="label_24_hour_clock">24 Hour Clock</string>
    <string name="label_keyboard_light">Keyboard backlight</string>
    <string name="d168_btn_add_to_contact">Add to contact</string>
    <string name="d168_btn_add_to_blacklist">Add to blacklist</string>
    <string name="label_open_vibrator">Vibrator enable</string>
    <string name="label_lock_screen">Auto lock screen</string>
    <string name="label_lock_screen_password">Lock screen password</string>
    <string name="label_password">password</string>
    <string name="label_date_format">Date Format:</string>
    <string name="label_date_separator">Date Separator:</string>
    <string name="dial_back">Dial-back</string>
    <string name="reply">Reply</string>
    <string name="resync_time_error">The resync time param is error</string>
    <string name="label_date_wallpaper">WallPaper setting</string>
    <string name="label_battery_percent">Battery percent</string>
    <string name="label_key_tone">Key tone</string>
    <string name="label_call_prefix">Call Prefix:</string>
    <string name="d168_update_title">Firmware Update</string>
    <string name="d168_ut_server_url_label">Update Server Url:</string>
    <string name="d168_ut_url_view">Url View:</string>
    <string name="d168_ut_server_url_hint">Enter Url</string>
    <string name="d168_ut_btn_check">Check</string>
    <string name="d168_ut_btn_update">Update</string>
    <string name="d168_ut_version_label">New Version:</string>
    <string name="d168_ut_progress">Progress:</string>
    <string name="d168_ut_install">Install</string>
    <string name="d168_ut_download_status">Download Status:</string>
    <string name="tip_click">click</string>
    <string name="tip_delete">delete</string>
    <string name="d168_tip_no_wifi">Empty</string>
    <string name="d168_tip_enable_wifi">Please open the WIFI</string>
    <string name="tip_click_pound">refresh</string>
    <string name="d168_tip_refresh_over">Refresh OK</string>
    <string name="d168_tip_wifi_connected">Connected</string>
    <string name="d168_tip_wifi_disconnected">Disconnected</string>
    <string name="d168_tip_wifi_connecting">Connecting</string>
    <string name="d168_tip_msg_sended">sended</string>
    <string name="d168_tip_msg_recv">ok</string>
    <string name="d168_press_cancel">Press ok cancel</string>
    <string name="d168_ip_config_label">IP Config</string>
    <string name="tip_modechange_3">update</string>
    <string name="d168_label_localdirectory">Local Directory</string>
    <string name="d168_label_blacklist">Black List</string>
    <string name="d168_label_remotephonebook">Remote Phonebook</string>
    <string name="d168_label_speed">Speed Dials</string>
    <string name="d168_label_group_management">Group Management</string>
    <string name="d168_tip_wificonn">WIFI connected</string>
    <string name="d168_tip_wifidisconn">WIFI connect failed</string>
    <string name="d168_tip_default">default</string>
    <string name="d168_tip_default_account">default</string>
    <string name="label_dhcp">DHCP</string>
    <string name="label_enable">Enable</string>
    <string name="d168_account_audio_codec">Audio codec</string>
    <string name="d168_account_choice_1">Choice 1:</string>
    <string name="d168_account_choice_2">Choice 2:</string>
    <string name="d168_account_choice_3">Choice 3:</string>
    <string name="d168_account_choice_4">Choice 4:</string>
    <string name="d168_account_choice_5">Choice 5:</string>
    <string name="d168_account_choice_6">Choice 6:</string>
    <string name="d168_wifi_ip_content">192.168.0.103</string>
    <string name="d168_wifi_gateway_content">192.168.0.1</string>
    <string name="d168_wifi_dns_content">8.8.8.8</string>
    <string name="d168_wifi_dns2_content">8.8.4.4</string>
    <string name="d168_wifi_prefix_content">24</string>
    <string name="contact_name">Name:</string>
    <string name="d168_label_eap_ca_cert">CA certificate:</string>
    <string name="title_media">Media</string>
    <string name="bn_soft_right_back">Back</string>
    <string name="bn_soft_left_detele">Delete</string>
</resources>