<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_greybg2" >

    <TextView
        android:id="@+id/title"
        style="@style/style_head"
        android:text="@string/title_pin" />

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <include layout="@layout/press_apply" />

        <LinearLayout style="@style/style_bottom_block" >

            <TextView
                android:id="@+id/tv_left_btn"
                style="@style/style_bottom_left"
                android:text="@string/bn_soft_left_detele" />

            <TextView
                android:id="@+id/tv_inputtype"
                style="@style/style_bottom_middle"
                android:text="" />

            <TextView
                android:id="@+id/tv_right_btn"
                style="@style/style_bottom_right"
                android:text="@string/bn_soft_right_back" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:focusable="true"
        android:orientation="vertical" >

        <TextView
            style="@style/style_title"
            android:text="@string/label_pin_enable" />

        <View style="@style/style_title_bottom_line" />

        <LinearLayout style="@style/style_linear_layout" >

            <TextView
                style="@style/style_tv"
                android:text="@string/label_enable" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <CheckBox
                android:id="@+id/pin_enable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp" />
        </LinearLayout>

        <TextView
            style="@style/style_title"
            android:text="@string/label_pin_old_passwd" />

        <View style="@style/style_title_bottom_line" />

        <LinearLayout style="@style/style_linear_layout" >

            <TextView
                style="@style/style_tv"
                android:text="@string/label_pin_passwd" />

            <EditText
                android:id="@+id/old_pin_password"
                style="@style/style_et"
                android:text=""
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/new_pw_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/style_title"
                android:text="@string/label_pin_new_passwd" />

            <View style="@style/style_title_bottom_line" />

            <LinearLayout style="@style/style_linear_layout" >

                <TextView
                    style="@style/style_tv"
                    android:text="@string/label_passwd" />

                <EditText
                    android:id="@+id/new_pin_password"
                    style="@style/style_et"
                    android:text=""
                    android:textColor="#000000" />
            </LinearLayout>

            <TextView
                style="@style/style_title"
                android:text="@string/tip_pin_confirm" />

            <View style="@style/style_title_bottom_line" />

            <LinearLayout style="@style/style_linear_layout" >

                <TextView
                    style="@style/style_tv"
                    android:text="@string/label_passwd" />

                <EditText
                    android:id="@+id/new_pin_password_confirm"
                    style="@style/style_et"
                    android:text=""
                    android:textColor="#000000" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>