<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="match_parent"
    android:background="@color/color_greybg" >

    <TextView
        android:id="@+id/title_label"
        style="@style/style_head"
        android:text="@string/label_group_create" />

    <LinearLayout
        android:id="@+id/bottom"
        style="@style/style_bottom_block"
        android:layout_alignParentBottom="true" >

        <TextView
            android:id="@+id/left_btn"
            style="@style/style_bottom_left"
            android:text="@string/bn_soft_left_detele" />

        <TextView
            android:id="@+id/inputtype"
            style="@style/style_bottom_middle"
            android:text="" />

        <TextView
            android:id="@+id/right_btn"
            style="@style/style_bottom_right"
            android:text="@string/bn_soft_right_back" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mode_tips"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_above="@id/bottom" >

        <include layout="@layout/press_apply" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/name_block"
        style="@style/style_linear_layout"
        android:layout_below="@id/title_label"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="3dp" >

        <TextView
            style="@style/style_tv"
            android:layout_width="106dp"
            android:layout_marginRight="6dp"
            android:text="@string/contact_name" />

        <EditText
            android:id="@+id/user_name"
            style="@style/style_et" />
    </LinearLayout>

    <LinearLayout
        style="@style/style_linear_layout"
        android:layout_below="@id/name_block" >

        <TextView
            style="@style/style_tv"
            android:layout_width="106dp"
            android:layout_marginRight="6dp"
            android:text="@string/contact_ring" />

        <TextView
            android:id="@+id/user_ring"
            style="@style/style_et_guide"
            android:text="@string/d168_tip_default" />
    </LinearLayout>

</RelativeLayout>