<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="match_parent"
    android:background="@color/wihtefff" >

    <TextView
        android:id="@+id/title_label"
        style="@style/style_head"
        android:text="@string/label_contact_create" />

    <View
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/contact_item_top"
        android:layout_below="@id/title_label"
        android:background="@color/d168_contact_sub_back" />

    <LinearLayout
        android:id="@+id/bottom"
        style="@style/style_bottom_block"
        android:layout_alignParentBottom="true" >

        <TextView
            android:id="@+id/left_btn"
            style="@style/style_bottom_left"
            android:text="@string/bn_soft_left_detele" />

        <TextView
            android:id="@+id/inputtype"
            style="@style/style_bottom_middle"
            android:text="" />

        <TextView
            android:id="@+id/right_btn"
            style="@style/style_bottom_right"
            android:text="@string/bn_soft_right_back" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mode_tips"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_above="@id/bottom" >

        <include layout="@layout/press_apply" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/mode_tips"
        android:layout_below="@id/top_view"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/main_body"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:orientation="vertical"
            android:paddingTop="5dp" >

            <LinearLayout
                style="@style/style_linear_layout"
                android:layout_marginBottom="5dp" >

                <TextView
                    style="@style/style_tv"
                    android:layout_width="106dp"
                    android:layout_marginRight="6dp"
                    android:text="@string/contact_name" />

                <EditText
                    android:id="@+id/user_name"
                    style="@style/style_et" />
            </LinearLayout>

            <LinearLayout
                style="@style/style_linear_layout"
                android:layout_marginBottom="5dp" >

                <TextView
                    style="@style/style_tv"
                    android:layout_width="106dp"
                    android:layout_marginRight="6dp"
                    android:text="@string/contact_office" />

                <EditText
                    android:id="@+id/user_office"
                    style="@style/style_et" />
            </LinearLayout>

            <LinearLayout
                style="@style/style_linear_layout"
                android:layout_marginBottom="5dp" >

                <TextView
                    style="@style/style_tv"
                    android:layout_width="106dp"
                    android:layout_marginRight="6dp"
                    android:text="@string/contact_mobile" />

                <EditText
                    android:id="@+id/user_mobile"
                    style="@style/style_et" />
            </LinearLayout>

            <LinearLayout
                style="@style/style_linear_layout"
                android:layout_marginBottom="5dp" >

                <TextView
                    style="@style/style_tv"
                    android:layout_width="106dp"
                    android:layout_marginRight="6dp"
                    android:text="@string/contact_other" />

                <EditText
                    android:id="@+id/user_other"
                    style="@style/style_et" />
            </LinearLayout>

            <LinearLayout
                style="@style/style_linear_layout"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp" >

                <TextView
                    style="@style/style_tv"
                    android:layout_width="106dp"
                    android:layout_marginRight="6dp"
                    android:text="@string/contact_account" />

                <TextView
                    android:id="@+id/user_account"
                    style="@style/style_et_guide"
                    android:text="@string/d168_tip_default_account" />
            </LinearLayout>

            <LinearLayout
                style="@style/style_linear_layout"
                android:layout_marginBottom="5dp" >

                <TextView
                    style="@style/style_tv"
                    android:layout_width="106dp"
                    android:layout_marginRight="6dp"
                    android:text="@string/contact_ring" />

                <TextView
                    android:id="@+id/user_ring"
                    style="@style/style_et_guide" />
            </LinearLayout>

            <LinearLayout
                style="@style/style_linear_layout"
                android:layout_marginBottom="5dp" >

                <TextView
                    style="@style/style_tv"
                    android:layout_width="106dp"
                    android:layout_marginRight="6dp"
                    android:text="@string/contact_group" />

                <TextView
                    android:id="@+id/user_group"
                    style="@style/style_et_guide"
                    android:text="@string/d168_tip_default" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>